--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Todo esta en el Console</h1>
     <script src="./index.js"></script>
-    
 </body>
 </html>
